--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
@@ -41,7 +41,7 @@ Outputs & filters:
       access([ptable.c1], [ptable.c2]), partitions(p[0-15])
 ```
 
-通过执行计划可以看出，分区表默认的并行查询的 `dop` 为 1。如果 OceanBase 集群一共有 3 个 OBServer，表 `ptable` 的 16 个分区分散在 3 个 OBServer 中，那么每一个 OBServer 都会启动一个工作线程（Worker Thread）来执行分区数据的扫描工作，一共需要启动 3 个工作线程来执行表的扫描工作。
+通过执行计划可以看出，分区表默认的并行查询的 `dop` 为 1。如果 OceanBase 集群一共有 3 个 OBServer 节点，表 `ptable` 的 16 个分区分散在 3 个 OBServer 节点中，那么每一个 OBServer 节点都会启动一个工作线程（Worker Thread）来执行分区数据的扫描工作，一共需要启动 3 个工作线程来执行表的扫描工作。
 
 针对分区表，添加 `PARALLEL` Hint 启动并行查询，并指定 `dop` 值，通过 `EXPLAIN` 命令查看生成的执行计划。
 
@@ -67,9 +67,9 @@ Outputs & filters:
       access([ptable.c1], [ptable.c2]), partitions(p[0-15])
 ```
 
-通过执行计划可以看出，并行查询的 `dop` 值为 8。如果查询分区所在的 OBServer 的个数小于等于 `dop` 值，那么工作线程（总个数等于 `dop` 值）会按照一定的策略分配到涉及的 OBServer 上；如果查询分区所在的 OBServer 的个数大于 `dop` 值，那么每一个 OBServer 都会至少启动一个工作线程，一共需要启动的工作线程的数目会大于 `dop` 值。
+通过执行计划可以看出，并行查询的 `dop` 值为 8。如果查询分区所在的 OBServer 节点的个数小于等于 `dop` 值，那么工作线程（总个数等于 `dop` 值）会按照一定的策略分配到涉及的 OBServer 节点上；如果查询分区所在的 OBServer 节点的个数大于 `dop` 值，那么每一个 OBServer 都会至少启动一个工作线程，一共需要启动的工作线程的数目会大于 `dop` 值。
 
-例如，当 `dop=8`，如果 16 个分区均匀的分布在 4 台 OBServer 节点上，那么每一个 OBServer 上都会启动 2 个工作线程来扫描其对应的分区（一共启动 8 个工作线程）；如果 16 个分区分布在 16 台 OBServer 节点上（每一个节点一个分区），那么每一台 OBServer 上都会启动 1 个工作线程来扫描其对应的分区（一共启动 16 个工作线程）。
+例如，当 `dop=8`，如果 16 个分区均匀的分布在 4 台 OBServer 节点上，那么每一个 OBServer 节点上都会启动 2 个工作线程来扫描其对应的分区（一共启动 8 个工作线程）；如果 16 个分区分布在 16 台 OBServer 节点上（每一个节点一个分区），那么每一台 OBServer 节点上都会启动 1 个工作线程来扫描其对应的分区（一共启动 16 个工作线程）。
 
 如果针对分区表的查询，查询分区数目小于等于 1，系统不会启动并行查询。如下例所示，对 `ptable` 的查询添加一个过滤条件 `c1=1`。
 
