--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
@@ -23,7 +23,7 @@
 
 ## SQL Audit 淘汰机制
 
-租户的后台任务每隔 1s 会根据 OBServer 和 SQL Audit 的内存使用情况来决定是否触发淘汰。SQL Audit 内存上限根据 `ob_sql_audit_percentage` 分配可用的最大内存。
+租户的后台任务每隔 1s 会根据 OBServer 节点和 SQL Audit 的内存使用情况来决定是否触发淘汰。SQL Audit 内存上限根据 `ob_sql_audit_percentage` 分配可用的最大内存。
 
 当 SQL Audit 的实际内存使用达到指定阈值时，满足触发淘汰的条件，开启淘汰；当 SQL Audit 的实际内存使用降到指定阈值时，满足停止淘汰的条件，停止淘汰。SQL Audit 淘汰机制如下表所示。
 
@@ -106,7 +106,7 @@
 | RETRY_CNT               | bigint(20)          | number(38)     |重试次数      |
 | TABLE_SCAN              | tinyint(4)          | number(38)     |判断该请求是否含全表扫描     |
 | CONSISTENCY_LEVEL       | bigint(20)          | number(38)     |一致性级别       |
-| MEMSTORE_READ_ROW_COUNT | bigint(20)          | number(38)     | `MEMSTORE` 中读的行数      |
+| MEMSTORE_READ_ROW_COUNT | bigint(20)          | number(38)     | MemStore 中读的行数      |
 | SSSTORE_READ_ROW_COUNT  | bigint(20)          | number(38)     |`SSSTORE` 中读的行数       |
 | DATA_BLOCK_READ_CNT             | bigint(20)          | NO   |  访问的数据微块数量   |
 | DATA_BLOCK_CACHE_HIT            | bigint(20)          | NO   |  命中数据微块 Cache 数量   |
