--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/12.JOB.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/12.JOB.md
@@ -18,7 +18,7 @@ ALTER SYSTEM RUN JOB job_name
 
 |        **参数**       |          **描述**         |
 |-----------------------|-------------|
-| job_name              | 指定任务名称。有特殊字符时需要单引号，其它情况下单引号加与不加都支持，已支持的 Job 有： <ul><li> `check_partition_table`：OBServer 执行 Partition Table 核对删除任务。</li>   <li> `root_inspection`：触发 RootService 自检。</li></ul>    |
+| job_name              | 指定任务名称。有特殊字符时需要单引号，其它情况下单引号加与不加都支持，已支持的 Job 有： <ul><li> `check_partition_table`：OBServer 节点执行 Partition Table 核对删除任务。</li>   <li> `root_inspection`：触发 Root Service 自检。</li></ul>    |
 | SERVER \[=\] 'server' | 该任务指定 Server 执行。仅 `check_partition_table` 任务支持该参数。    |
 | ZONE \[=\] 'zone'     | 该任务指定 Zone 执行。仅 `check_partition_table` 任务支持该参数。   |
 
