--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md
@@ -6,7 +6,7 @@
 
 该语句仅支持在 sys 租户执行。
 
-集群单个 Zone 中多台 OBServer 之间调整资源分布不均衡时，可以调整租户使用的资源分布，以便集群资源使用均衡。在进行 Unit 迁移前，您需要关闭负载均衡，语法如下：
+集群单个 Zone 中多台 OBServer 节点之间调整资源分布不均衡时，可以调整租户使用的资源分布，以便集群资源使用均衡。在进行 Unit 迁移前，您需要关闭负载均衡，语法如下：
 
 ```sql
 obclient> ALTER SYSTEM SET enable_rebalance = false;
