--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/18.replica.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/18.replica.md
@@ -50,9 +50,9 @@ replica_type:
 |               **参数**              |         **描述**              |
 |-------------------------------------|---------------------------------|
 | SWITCH REPLICA                      | Leader 改选。    |
-| DROP REPLICA                        | 副本删除。删除指定 OBServer 上的 Replica，必须指定 `partition_id_desc` 与 OBServer 地址。    |
-| {MOVE \| COPY} REPLICA              | 副本迁移/复制，需要指定源 OBServer 和目的 OBServer ，以及 `partition_id_desc`。  |
-| REPORT REPLICA                      | 副本汇报，强制要求某个 OBServer 或者某个 Zone 内的所有 OBServer 进行 Replica 汇报。 |
+| DROP REPLICA                        | 副本删除。删除指定 OBServer 节点上的 Replica，必须指定 `partition_id_desc` 与 OBServer 节点地址。    |
+| {MOVE \| COPY} REPLICA              | 副本迁移/复制，需要指定源 OBServer 节点和目的 OBServer 节点，以及 `partition_id_desc`。  |
+| REPORT REPLICA                      | 副本汇报，强制要求某个 OBServer 节点或者某个 Zone 内的所有 OBServer 节点进行 Replica 汇报。 |
 | {ALTER \| CHANGE \| MODIFY} REPLICA | 修改副本属性，可以修改指定副本的副本类型。现在已经支持的副本类型为 `Full`，即全功能型副本。`'replica_type'` 的值可以是副本类型的全称或者简写的首字符 '`F`，大小写不敏感。 |
 
 ## 示例
