--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/38.drop-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/38.drop-tablegroup-of-mysql-mode.md
@@ -18,23 +18,23 @@ DROP TABLEGROUP [IF EXISTS] tablegroup_name;
 
 ## 示例
 
-* 删除名为 `TableGroup1` 的表组。
+* 删除名为 `Table_Group1` 的表组。
 
   ```sql
-  obclient> DROP TABLEGROUP TableGroup1;
+  obclient> DROP TABLEGROUP Table_Group1;
   Query OK, 0 rows affected
   ```
 
-* 删除不存在的表组 `TableGroup1` 。
+* 删除不存在的表组 `Table_Group1` 。
 
   ```sql
-  obclient> DROP TABLEGROUP TableGroup1;
+  obclient> DROP TABLEGROUP Table_Group1;
   ERROR 5151 (42P01): tablegroup not exist
   ```
 
-* 指定 `IF EXISTS`，删除不存在的表组 `TableGroup1` 。
+* 指定 `IF EXISTS`，删除不存在的表组 `Table_Group1` 。
 
   ```sql
-  obclient> DROP TABLEGROUP IF EXISTS TableGroup1;
+  obclient> DROP TABLEGROUP IF EXISTS Table_Group1;
   Query OK, 0 rows affected, 1 warning
   ```
