--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/15.create-database-link-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/15.create-database-link-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于创建一个访问指定远端数据库的 `dblink`。该语句中需要指定 `dblink` 名称并且提供远端数据库的用户名、租户名、密码、IP 地址、端口号以及访问类型，反向 LINK 需要提供本地数据库的用户名、租户名、密码、IP 地址、端口号，不提供访问类型时默认创建访问远端 OceanBase 数据库的 `dblink`。
 
-如果远端数据库是 OceanBase 数据库，IP 地址和端口号可以是指定远端 OceanBase 集群中某个 OBServer的 IP 地址和端口号，或者是 OceanBase 集群的 Proxy 的 IP 地址和端口号。当创建 `dblink` 的端口号是集群的Proxy 的端口号，且 Proxy 是由 ConfigUrl 部署的时候，需要指定 Cluster 名字。当需要反向 LINK 功能时需要额外提供本地 OceanBase 集群中某个 OBServer 的 IP 地址和端口号以及用户名、租户名、密码。
+如果远端数据库是 OceanBase 数据库，IP 地址和端口号可以是指定远端 OceanBase 集群中某个 OBServer 节点的 IP 地址和端口号，或者是 OceanBase 集群的 Proxy 的 IP 地址和端口号。当创建 `dblink` 的端口号是集群的Proxy 的端口号，且 Proxy 是由 ConfigUrl 部署的时候，需要指定 Cluster 名字。当需要反向 LINK 功能时需要额外提供本地 OceanBase 集群中某个 OBServer 的 IP 地址和端口号以及用户名、租户名、密码。
 
 如果远端数据库是 Oracle 数据库，需要显示指定访问类型为 `OCI`类型，并指定 `oracle_sid`，且租户名为`oracle`。
 
@@ -47,20 +47,20 @@ CREATE DATABASE LINK dblink_name CONNECT TO user_name@tenant_name
 示例 1：创建连接到远端 OceanBase 数据库的 `dblink`，名称为`ob_dblink_proxy`。远端数据库的租户使用默认的`oracle`。Proxy 由 ConfigUrl 部署。集群名字需要用双引号括住，防止集群名字的字母被大写。
 
 ```sql
-obclient> CREATE DATABASE LINK ob_dblink_proxy CONNECT TO ob_testuser@oracle IDENTIFIED BY **1** OB HOST  '10.10.10.1:30084' CLUSTER “ob***”;
+obclient> CREATE DATABASE LINK ob_dblink_proxy CONNECT TO ob_testuser@oracle IDENTIFIED BY **1** OB HOST  '10.XXX.XXX.XXX:30084' CLUSTER “ob***”;
 Query OK, 1 row affected
 ```
 
 示例 2：创建连接到远端 OceanBase 数据库且带有反向 LINK 的 `dblink`，名字为 `ob_dblink_reverse_link`。远端数据库的租户为 `oracle`。
 
 ```sql
-obclient> CREATE DATABASE LINK ob_dblink_reverse_link CONNECT TO ob_testuser2@oracle IDENTIFIED BY **1** OB HOST '10.10.10.1:35305' MY_NAME local_ob_testuser@oracle identified by **2** host '10.10.10.1:35307';
+obclient> CREATE DATABASE LINK ob_dblink_reverse_link CONNECT TO ob_testuser2@oracle IDENTIFIED BY **1** OB HOST '10.XXX.XXX.XXX:35305' MY_NAME local_ob_testuser@oracle identified by **2** host '10.XXX.XXX.XXX:35307';
 Query OK, 1 row affected 
 ```
 
 示例 3：创建连接到远端 Oracle 数据库的 `dblink`，名字为`orcl_dblink`。远端数据库的租户为`oracle`。
 
 ```sql
-obclient> CREATE DATABASE LINK orcl_dblink CONNECT TO orcl_testuser@oracle IDENTIFIED BY **1** OCI HOST '10.10.10.1:1521/ORCL';
+obclient> CREATE DATABASE LINK orcl_dblink CONNECT TO orcl_testuser@oracle IDENTIFIED BY **1** OCI HOST '10.XXX.XXX.XXX:1521/ORCL';
 Query OK, 1 row affected 
 ```
