--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
@@ -36,7 +36,7 @@ DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
 | ORACLE_FUNCTION |  HA_MID   | 对应迁移任务。 |
 | ORACLE_FUNCTION |  HA_LOW   | 对应备份、备份清理等任务。   |
 | ORACLE_FUNCTION |  DDL   | 对应唯一索引校验，删列补数据操作。   |
-| ORACLE_FUNCTION |  DDL_HIGH   | 对应 DDL Memtable 的转储操作。  |
+| ORACLE_FUNCTION |  DDL_HIGH   | 对应 DDL MemTable 的转储操作。  |
 
 
 
