--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.load-data-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.load-data-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于从外部导入数据。
 
-OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载 OBServer 本地的输入文件。因此，用户需要在导入之前将文件拷贝到某台 OBServer 上。
+OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载 OBServer 节点本地的输入文件。因此，用户需要在导入之前将文件拷贝到某台 OBServer 节点上。
 
 <main id="notice" type='explain'>
  <h4>说明</h4>
@@ -57,7 +57,7 @@ LOAD DATA
 | load_batch_size(M)               | 指定每次插入的批量大小，`M` 默认为 `1000`。推荐取值范围为 \[100,1000\]。    |
 | APPEND | 使用 Hint 启用旁路导入功能，即支持直接在数据文件中分配空间并写入数据。`APPEND` Hint 默认等同于使用的 `direct(false, 0)`，同时可以实现 在线收集统计信息（`GATHER_OPTIMIZER_STATISTICS` Hint）的功能。   |
 | direct | 使用 Hint 启用旁路导入。`direct(bool, int)` 中的 `bool`参数表示给定的CSV 文件是否有序，`true` 表示有序，此时内部就不需要排序了，否则内部就需要排序；`int` 表示最大容忍的错误行数。 |
-| file_name                        | 定输入文件的路径和文件名，目前仅支持从 OBServer 本地加载文件。   |
+| file_name                        | 定输入文件的路径和文件名，目前仅支持从 OBServer 节点本地加载文件。   |
 | REPLACE \| IGNORE                | 如果遇到唯一键冲突，`REPLACE` 表示覆盖冲突行，`IGNORE` 表示忽略冲突行。 `LOAD DATA` 通过表的主键来判断数据是否重复，如果表不存在主键，则 `REPLACE` 与 `IGNORE` 选项没有区别。缺省时，遇到重复数据的时候，`LOAD DATA` 会将出现错误的数据记录到日志文件中。      |
 | table_name                       | 导入数据的表的名称，支持分区表与非分区表。  |
 | FIELDS \| COLUMNS                | 指定字段的格式。 <ul><li> `ENCLOSED BY`：设置导出值的修饰符。  </li> <li> `TERMINATED BY`：设置导出列的结束符。 </li> <li>`ESCAPED BY`：设置导出值忽略的字符。</li></ul>    |
