--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/5.distributed-execution-plan/5.optimize-the-parameters-for-parallel-query.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/5.distributed-execution-plan/5.optimize-the-parameters-for-parallel-query.md
@@ -31,7 +31,7 @@ obclient>SHOW PARAMETERS LIKE '%dtl%';
 +-------+----------+----------------+----------+-----------------+-----------+-------+---------------+----------+---------+---------+-------------------+
 | zone  | svr_type | svr_ip         | svr_port | name            | data_type | value | info          | section  | scope   | source  | edit_level        |
 +-------+----------+----------------+----------+-----------------+-----------+-------+---------------+----------+---------+---------+-------------------+
-| zone1 | observer | 100.81.152.114 |    36500 | dtl_buffer_size | NULL      | 64K   | to be removed | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+| zone1 | observer | 100.XXX.XXX.XXX |    36500 | dtl_buffer_size | NULL      | 64K   | to be removed | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
 +-------+----------+----------------+----------+-----------------+-----------+-------+---------------+----------+---------+---------+-------------------+
 1 row in set
 ```
@@ -40,7 +40,7 @@ obclient>SHOW PARAMETERS LIKE '%dtl%';
 
 |  **参数名称**   |   **描述**    |  **取值范围**   | **默认值** |     **配置建议**  |
 |-----------|---------|--------|---------|------|
-| _enable_px_batch_rescan | 控制在 NLJ 生成分布式 PX RESCAN 计划执行时是否使用BATCH RESCAN, 可以获得更好的性能. | * True   * False    | True    | 默认开启会获得更好的性能，但会消耗更多的内存。                                                          |
-| _bloom_filter_enabled   | 控制在 HASH JOIN 场景下是否开启 BLOOM FILTER。                       | * True   * False    | True    | 在并行度大于 1 的情况下默认开启，如果 HASH JOIN 的连接条件过滤性不佳，打开 BLOOM FILTER 会有额外的开销，在此场景可以考虑关闭此功能。 |
+| _enable_px_batch_rescan | 控制在 NLJ 生成分布式 PX RESCAN 计划执行时是否使用BATCH RESCAN, 可以获得更好的性能. | True 或者 False    | True    | 默认开启会获得更好的性能，但会消耗更多的内存。                                                          |
+| _bloom_filter_enabled   | 控制在 HASH JOIN 场景下是否开启 BLOOM FILTER。                       | True 或者 False    | True    | 在并行度大于 1 的情况下默认开启，如果 HASH JOIN 的连接条件过滤性不佳，打开 BLOOM FILTER 会有额外的开销，在此场景可以考虑关闭此功能。 |
 
 
