--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
@@ -89,7 +89,7 @@ Switchover 的执行流程如下图所示。
 
    根据查询结果，如果 `RECOVERY_UNTIL_SCN` 列的值等于 MAX SCN（4611686018427387903）的值，则表示备租户在持续同步日志状态，否则，备租户未在持续同步日志状态。
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](暂时无该视图)。
+   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](无法添加链接)。
 
 5. （可选）如果备租户未在持续同步日志状态，可以执行以下命令，使备租户进入持续同步模式。
 
@@ -99,7 +99,7 @@ Switchover 的执行流程如下图所示。
 
    如果使用 `sys` 租户执行该命令，则需要在语句中通过 `TENANT = tenant_name` 参数指定备租户名，例如 `ALTER SYSTEM RECOVER STANDBY TENANT = oracle_standby UNTIL UNLIMITED;`。
 
-   设置成功后，等待备租户日志同步。查看备租户日志同步进度的详细操作，可参见 [监控日志同步](../4.manage-log-synchronization/1.monitor-the-log-synchronization.md)。
+   设置成功后，等待备租户日志同步。查看备租户日志同步进度的详细操作，可参见 [监控日志同步](../4.monitor-the-log-synchronization-of-the-standby-tenant.md)。
 
 ## Switchover 步骤
 
@@ -159,7 +159,7 @@ Switchover 步骤主要完成主切备和备切主的操作。
 
       <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>备切主命令开始执行前，系统会检查备租户是否已同步到恢复源端的所有日志，故备切主命令的执行时间取决于备租户与主租户的同步进度。comments：如何查看同步进度？</p>
+      <p>备切主命令开始执行前，系统会检查备租户是否已同步到恢复源端的所有日志，故备切主命令的执行时间取决于备租户与主租户的同步进度。</p>
       </main>
 
       * 备租户所在集群的 `sys` 租户将备租户切换为主租户
@@ -192,7 +192,7 @@ Switchover 步骤主要完成主切备和备切主的操作。
 
       根据查询结果，备租户的 `TENANT_ROLE` 变为 `PRIMARY`，且 `SWITCHOVER_STATUS` 为 `NORMAL`，则表示备切主成功。
 
-      有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](暂时无该视图)。
+      有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](无法添加链接)。
 
 3. 配置新备租户（原主租户）的恢复源，接收新主租户的归档日志。
 
