--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
@@ -64,4 +64,4 @@
 
 ## 相关文档
 
-[UPDATE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/9.update-plan-directive-mysql.md)
+[UPDATE_PLAN_DIRECTIVE](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/9.update-plan-directive-mysql.md)
