--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/6.delete-a-plan-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/6.delete-a-plan-of-mysql-mode.md
@@ -39,4 +39,4 @@
 
 ## 相关文档
 
-[DELETE_PLAN](../../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/6.delete-plan-mysql.md)
+[DELETE_PLAN](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/6.delete-plan-mysql.md)
