--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/7.delete-a-consumer-group-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/7.delete-a-consumer-group-of-mysql-mode.md
@@ -44,4 +44,4 @@
 
 ## 相关文档
 
-[DELETE_CONSUMER_GROUP](../../../../../3.development-guide/6.pl-reference/2.pl-mysql/10.pl-system-package/1.DBMS_RESOURCE_MANAGER/5.DELETE_CONSUMER_GROUP.md)。
+[DELETE_CONSUMER_GROUP](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/5.delete-consume-group-mysql.md)
