--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -46,7 +46,7 @@
 
    * `COMMENT` ：填写资源组的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/113.DBA_RSRC_CONSUMER_GROUPS.md)。
+   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
 
 3. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN` 子程序，创建资源管理计划。
 
@@ -62,7 +62,7 @@
   
    * `COMMENT` ：填写资源管理计划的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/115.DBA_RSRC_PLANS.md)。
+   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
 
 4. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN_DIRECTIVE` 子程序，创建资源管理计划对应的资源管理计划内容，用于启用资源管理计划时，限制资源组所使用的 CPU 资源和 IOPS 资源。
 
@@ -110,7 +110,7 @@
 
    创建成功，可以查询 `DBA_RSRC_PLAN_DIRECTIVES` 视图和 `DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
 
-   有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
+   有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
 
    有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
 
@@ -177,7 +177,7 @@
 
       * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
 
-   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/114.DBA_RSRC_GROUP_MAPPINGS.md)。
+   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/123.dba_rsrc_group_mappings-of-oracle-mode.md)。
 
 6. 为资源组启用合适的资源管理计划。
 
