--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/5.delete-a-plan-directive-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/5.delete-a-plan-directive-of-mysql-mode.md
@@ -40,4 +40,4 @@
 
 ## 相关文档
 
-[DELETE_PLAN_DIRECTIVE](../../../../../3.development-guide/6.pl-reference/2.pl-mysql/10.pl-system-package/1.DBMS_RESOURCE_MANAGER/7.DELETE_PLAN_DIRECTIVE.md)
+[DELETE_PLAN_DIRECTIVE](../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/7.delete-plan-directive-mysql.md)
