--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase_dba_ob_tenants-mysql.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase_dba_ob_tenants-mysql.md
@@ -5,7 +5,7 @@
 展示租户的基本信息。
 <main id="notice" type='explain'>
    <h4>说明</h4>
-   <ul><li>  通过系统租户查询此视图时，可以展示所有租户的信息，包括系统租户、用户创建的租户（用户租户），以及 META 租户。用户可以根据 <code>TENANT_TYPE</code> 列来区分租户类型。 </li><li> 通过普通租户查询此视图时，只展示本租户的信息。 </li></ul>
+   <ul><li>  通过系统租户查询此视图时，可以展示所有租户的信息，包括系统租户、用户创建的租户（用户租户），以及 Meta 租户。用户可以根据 <code>TENANT_TYPE</code> 列来区分租户类型。 </li><li> 通过普通租户查询此视图时，只展示本租户的信息。 </li></ul>
 </main>
 
 ## 字段说明
@@ -29,7 +29,7 @@
 | SWITCHOVER_EPOCH| bigint(20)| NO | SWITCHOVER/FAILOVER 唯一标识|
 | SYNC_SCN| bigint(20) unsigned| NO | 当前租户已同步的快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | REPLAYABLE_SCN| bigint(20) unsigned| NO | 当前租户可回放快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
-| READABLE_SCN| bigint(20) unsigned| NO | 当前租户可读快照版本，对于系统租户和Meta租户无意义，显示为NULL|
+| READABLE_SCN| bigint(20) unsigned| NO | 当前租户可读快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | RECOVERY_UNTIL_SCN| bigint(20) unsigned| NO | 当前租户最大恢复位点，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | LOG_MODE| varchar(100)| NO | 归档模式：<ul><li>  `ARCHIVELOG` 指归档模式开启中 </li><li> `NOARCHIVELOG` 指未开启归档模式 </li></ul>|
 | ARBITRATION_SERVICE_STATUS |  varchar(64)   | NO | 租户的仲裁服务状态，取值如下：<ul><li>`ENABLING` 指开启中   </li><li> `ENABLED` 指开启完成</li><li> `DISABLING` 指关闭中</li><li>`DISABLED`  指关闭完成 </li></ul>|
