--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/269.dba_policy_contexts-oracle.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/269.dba_policy_contexts-oracle.md
@@ -8,9 +8,9 @@
 
 | 字段 | 类型 | 是否可以为 NULL | 描述 |
 | --- | --- | --- | --- |
-| OBJECT_OWNER | VARCHAR(128) | YES | 受策略控制的对象的拥有者 |
-| OBJECT_NAME | VARCHAR(128) | YES | 受策略控制的对象的名字 |
-| NAMESPACE | VARCHAR(128) | NO | 关联的 Context 名称 |
-| ATTRIBUTE | VARCHAR(128) | NO | 关联的 Context 中的属性名 |
+| OBJECT_OWNER | VARCHAR2(128) | YES | 受策略控制的对象的拥有者 |
+| OBJECT_NAME | VARCHAR2(128) | YES | 受策略控制的对象的名字 |
+| NAMESPACE | VARCHAR2(128) | NO | 关联的 Context 名称 |
+| ATTRIBUTE | VARCHAR2(128) | NO | 关联的 Context 中的属性名 |
 | COMMON | VARCHAR2(3) | NO | 仅用于兼容，目前值固定为 NO。 |
 | INHERITED | VARCHAR2(3) | NO | 仅用于兼容，目前值固定为 NO。 |
