--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/107.v-ob_transaction_schedules-oracle.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/107.v-ob_transaction_schedules-oracle.md
@@ -2,14 +2,14 @@
 
 ## 功能
 
-本 Server 的事务 Scheduler 信息。
+当前 Server 的事务 Scheduler 信息。
 
 ## 字段说明
 
 | **字段** | **类型** | **是否可以为 NULL** | **描述** |
 | --- | --- | --- | --- |
 | TENANT_ID | NUMBER(38) | NO | 租户 ID |
-| SVR_IP | VARCHAR2(46) | NO | 副本所在的 Server IP地址 |
+| SVR_IP | VARCHAR2(46) | NO | 副本所在的 Server IP 地址 |
 | SVR_PORT | NUMBER(38) | NO | 副本所在的 Server 端口 |
 | SESSION_ID | NUMBER(38) | NO | 会话 ID |
 | TX_ID | NUMBER(38) | NO | 事务 ID |
