--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/122.v-ob_transaction_schedules-mysql.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/122.v-ob_transaction_schedules-mysql.md
@@ -2,14 +2,14 @@
 
 ## 功能
 
-本 Server 的事务 Scheduler 信息。
+当前 Server 的事务 Scheduler 信息。
 
 ## 字段说明
 
 | **字段** | **类型** | **是否可以为 NULL** | **说明** |
 | --- | --- | --- | --- |
 | TENANT_ID | bigint(20) | NO | 租户 ID |
-| SVR_IP | varchar(46) | NO | 副本所在的 Server IP地址 |
+| SVR_IP | varchar(46) | NO | 副本所在的 Server IP 地址 |
 | SVR_PORT | bigint(20) | NO | 副本所在的 Server 端口 |
 | SESSION_ID | bigint(20) | NO | 会话 ID |
 | TX_ID | bigint(20) | NO | 事务 ID |
