--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md
@@ -5,7 +5,7 @@
 展示租户的基本信息。
 <main id="notice" type='explain'>
    <h4>说明</h4>
-   <ul><li>  通过系统租户查询此视图时，可以展示所有租户的信息，包括系统租户、用户创建的租户（用户租户），以及 META 租户。用户可以根据 <code>TENANT_TYPE</code> 列来区分租户类型。 </li><li> 通过普通租户查询此视图时，只展示本租户的信息。 </li></ul>
+   <ul><li>  通过系统租户查询此视图时，可以展示所有租户的信息，包括系统租户、用户创建的租户（用户租户），以及 Meta 租户。用户可以根据 <code>TENANT_TYPE</code> 列来区分租户类型。 </li><li> 通过普通租户查询此视图时，只展示本租户的信息。 </li></ul>
 </main>
 
 ## 字段说明
@@ -29,6 +29,6 @@
 | SWITCHOVER_EPOCH | NUMBER | NO | SWITCHOVER/FAILOVER 的唯一标识|
 | SYNC_SCN | NUMBER | NO | 当前租户已同步的快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | REPLAYABLE_SCN | NUMBER | NO | 当前租户可回放快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
-| READABLE_SCN | NUMBER | NO | 当前租户可读快照版本，对于系统租户和Meta租户无意义，显示为NULL|
+| READABLE_SCN | NUMBER | NO | 当前租户可读快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | RECOVERY_UNTIL_SCN | NUMBER | NO | 当前租户最大恢复位点，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | LOG_MODE | VARCHAR2(100) | NO | 归档模式：<ul><li>  `ARCHIVELOG` 指归档模式开启中 </li><li> `NOARCHIVELOG` 指未开启归档模式 </li></ul>|
