--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/267.all_policy_groups-oracle.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/267.all_policy_groups-oracle.md
@@ -8,8 +8,8 @@
 
 | 字段 | 类型 | 是否可以为 NULL | 描述 |
 | --- | --- | --- | --- |
-| OBJECT_OWNER | VARCHAR(128) | YES | 受策略控制的对象的拥有者 |
-| OBJECT_NAME | VARCHAR(128) | YES | 受策略控制的对象的名字 |
-| POLICY_GROUP | VARCHAR(128) | NO | 策略组名 |
+| OBJECT_OWNER | VARCHAR2(128) | YES | 受策略控制的对象的拥有者 |
+| OBJECT_NAME | VARCHAR2(128) | YES | 受策略控制的对象的名字 |
+| POLICY_GROUP | VARCHAR2(128) | NO | 策略组名 |
 | COMMON | VARCHAR2(3) | NO | 仅用于兼容，目前值固定为 NO。 |
 | INHERITED | VARCHAR2(3) | NO | 仅用于兼容，目前值固定为 NO。 |
