--- a/zh-CN/10.glossary.md
+++ b/zh-CN/10.glossary.md
@@ -123,7 +123,7 @@ OceanBase 数据库支持的副本类型如下表所示。
 系统根据一定的策略，通过动态调整 Unit 的位置和 Unit 内副本的位置，使得同一个 zone 内所有 server 的资源使用率达到均衡的过程。
 
 **复制表功能（duplicated table ）**
-为应对应用访问频率高更新低频率同时总能访问到最新数据的小表访问需求，同时要保证数据一致性，目前只能选择强一致性读访问 Leader 数据的方案。但由于访问频率高，Leader 容易成为性能瓶颈。为了解决"小表广播"需求场景问题，Oceanbase 数据库结合自身架构提供了复制表功能，将相关小表的副本复制到表所属租户的所有节点上。该表称为复制表，这些副本称为复制副本。复制表的更新事务在提交时保证将数据同步到所有的全功能副本及复制副本，确保在更新事务 commit 成功之后，在租户任意节点上能读到该事务修改的数据。
+为应对应用访问频率高更新低频率同时总能访问到最新数据的小表访问需求，同时要保证数据一致性，目前只能选择强一致性读访问 Leader 数据的方案。但由于访问频率高，Leader 容易成为性能瓶颈。为了解决"小表广播"需求场景问题，OceanBase 数据库结合自身架构提供了复制表功能，将相关小表的副本复制到表所属租户的所有节点上。该表称为复制表，这些副本称为复制副本。复制表的更新事务在提交时保证将数据同步到所有的全功能副本及复制副本，确保在更新事务 commit 成功之后，在租户任意节点上能读到该事务修改的数据。
 
 ## G
 
