--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/3.perform-failover.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/3.perform-failover.md
@@ -32,7 +32,7 @@
 
    根据查询结果，备租户的 `TENANT_ROLE` 变为 `PRIMARY`，且 `SWITCHOVER_STATUS` 为 `NORMAL`，则表示备租户切主成功。
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/1.overview-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](链接暂时无法添加)。
+   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/1.overview-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md)。
 
 ## Failover 后的注意事项
 
