--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/9.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/9.lock-table-of-mysql-mode.md
@@ -29,4 +29,4 @@ Query OK, 0 row affected
 * 以只读方式锁住表，该表只能被 `select`，不能被修改。如果在锁表时，该表上存在事务，则 `lock` 语句挂起，直到事务结束。多个会话可以同时对表执行该操作。
 * 以读写方式锁住表，`lock table` 的会话可以对表做修改及查询等操作，而其他会话不能对该表做任何操作，包括 `select` 也要被阻塞
   
-更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../../7.reference\4.development-reference\6.sql-syntax\2.common-tenant-of-mysql-mode\6.sql-statement-of-mysql-mode\60.lock-table-of-mysql-mode.md)。
+更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md)。
