--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
@@ -10,7 +10,7 @@ DBLink 创建成功后，执行以下语句，查询 `GV$DBLINK` 视图，查看
 obclient> SELECT * FROM GV$DBLINK;
 ```
 
-有关 `GV$DBLINK` 视图字段的更多说明信息，参见 [GV$DBLINK](../../../../7.reference/14.system-reference/5.system-view-for-oracle/3.performance-view-6/14.gv-dblink.md)。
+有关 `GV$DBLINK` 视图字段的更多说明信息，参见 [GV$DBLINK](../../../../5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/14.gv-dblink-of-oracle-mode.md)。
 
 ## 相关文档
 
