--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/1.resource-isolation-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/1.resource-isolation-overview.md
@@ -2,7 +2,7 @@
 
 本文主要介绍了资源隔离相关的概念、资源隔离方式及其适用场景。
 
-cgroups （Control Groups）是 Linux 内核提供的一种机制，这种机制可以根据特定的行为，将一系列系统任务及其子任务整合（或分隔）到按资源划分等级的不同组内，从而为系统资源管理提供一个统一的框架。
+cgroup （Control Groups）是 Linux 内核提供的一种机制，这种机制可以根据特定的行为，将一系列系统任务及其子任务整合（或分隔）到按资源划分等级的不同组内，从而为系统资源管理提供一个统一的框架。
 
 OoceanBase 数据库的当前版本中，由于租户工作线程和大部分后台线程均根据租户来区分，网络线程为共享线程，管理员可以在配置 cgroup 目录后，再通过 `DBMS_RESOURCE_MANAGER` 系统包来控制租户 CPU 和 IOPS 的占用。
 
