--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/4.update-a-plan-directive-of-mysql-mode.md
@@ -60,7 +60,7 @@
 
    有关 `oceanbase.DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [oceanbase.DBA_RSRC_PLAN_DIRECTIVES](../../../../无法添加)。
 
-   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](暂时无法添加)。
+   有关 `oceanbase.DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [oceanbase.DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/204.oceanbase.dba_ob_rsrc_io_directives.md)。
 
 ## 相关文档
 
