--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
@@ -89,7 +89,7 @@ Switchover 的执行流程如下图所示。
 
    根据查询结果，如果 `RECOVERY_UNTIL_SCN` 列的值等于 MAX SCN（4611686018427387903）的值，则表示备租户在持续同步日志状态，否则，备租户未在持续同步日志状态。
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](无法添加链接)。
+   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md)。
 
 5. （可选）如果备租户未在持续同步日志状态，可以执行以下命令，使备租户进入持续同步模式。
 
@@ -192,7 +192,7 @@ Switchover 步骤主要完成主切备和备切主的操作。
 
       根据查询结果，备租户的 `TENANT_ROLE` 变为 `PRIMARY`，且 `SWITCHOVER_STATUS` 为 `NORMAL`，则表示备切主成功。
 
-      有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](无法添加链接)。
+      有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [oceanbase.DBA_OB_TENANTS（MySQL 模式）](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 和 [DBA_OB_TENANTS（Oracle 模式）](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md)。
 
 3. 配置新备租户（原主租户）的恢复源，接收新主租户的归档日志。
 
