--- a/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/2.transaction-isolation-level-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/2.transaction-isolation-level-of-oracle-mode.md
@@ -2,7 +2,7 @@
 
 ## Oracle 模式支持的隔离级别
 
-Oceanbase 数据库在 Oracle 模式下，支持以下隔离级别：
+OceanBase 数据库在 Oracle 模式下，支持以下隔离级别：
 
 * 读已提交（Read Committed）：一个事务执行的查询，只能看到这次查询开始之前提交的数据。读已提交无法防止不可重复读和幻读两种异常现象。如果冲突的事务比较少，简单高效的读已提交隔离级别，对应用来说是足够的。
 
