--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -6,9 +6,9 @@
 
 * 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
 
-* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作可参见 [配置 cgroups](1.config-cgroups-of-oracle-mode.md)。
+* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作可参见 [配置 cgroup](1.config-cgroups-of-oracle-mode.md)。
 
-  如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroups。
+  如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroup。
 
 * 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md)。
 
@@ -112,7 +112,7 @@
 
    有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
 
-   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
+   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/280.dba_ob_rsrc_io_directives-oracle.md)。
 
 5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING` 子程序，根据实际使用场景，创建用户级资源隔离匹配规则。
 
