--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/4.update-a-plan-directive-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/4.update-a-plan-directive-of-oracle-mode.md
@@ -64,7 +64,7 @@
 
    有关 `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
 
-   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
+   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/280.dba_ob_rsrc_io_directives-oracle.md)。
 
 ## 相关文档
 
