--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -32,11 +32,11 @@
   | 对象名    | 128 字节   |
   | 表组名    | 128 字节   |
 
-## OBProxy 最大连接数限制
+## ODP 最大连接数限制
 
 |       类型        |                     最大限制                      |
 |-----------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 单个 OBProxy 的连接数 | 由 OBProxy 的 `client_max_connections` 参数控制，默认为 8192。 <blokequote>**说明**  </br>您可以通过增加 OBProxy 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。 </blokequote>|
+| 单个 ODP 的连接数 | 由 ODP 的 `client_max_connections` 参数控制，默认为 8192。 <blokequote>**说明**  </br>您可以通过增加 ODP 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。 </blokequote>|
 
 ## 分区副本数限制
 
