--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md
@@ -94,11 +94,11 @@ ALTER TENANT mysql_tenant set locality = "F@z1, F@z2, L@z3";
 
   * `locality = "F{1}@z1, R{2}@z1"`：表示 z1 有 1 个全能型副本，2 个只读型副本。
 
-  * `locality = "F{1}@z1, R{ALL_SERVER}@z1"`: 表示 z1 有一个全能型副本，并在同 zone 其余机器上创建只读型副本(可以没有只读型副本)。
+  * `locality = "F{1}@z1, R{ALL_SERVER}@z1"`: 表示 z1 有一个全能型副本，并在同 Zone 其余机器上创建只读型副本(可以没有只读型副本)。
 
 RootService 会根据用户设置的 Locality，通过副本创建/删除/迁移/类型转换的方式，使日志流的副本分布和类型满足用户配置的 Locality。
 
-4.1版本暂不支持Locality指定全功能型以外的副本类型。
+4.1 版本暂不支持 Locality 指定全功能型以外的副本类型。
 
 ## Primary Zone
 
