--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/4.view-tenant-information.md
@@ -38,7 +38,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS;
 
 通过 `DBA_OB_RESOURCE_POOLS` 视图，可以查看所有资源池信息。示例如下：
 
-以查询结果第二行数据为例，资源池（RESOURCE_POOL_ID）名称是 `pool_mysql001_zone3_jsu`，资源池的 ID（RESOURCE_POOL_ID）是 1001、归属于的租户 ID（TENANT_ID）是 1002、使用的资源规格 ID（UNIT_CONFIG_ID）是 1003，资源池的 unit 个数（UNIT_COUNT）是 1，使用的 Zone 列表（ZONE_LIST）是 zone3。
+以查询结果第二行数据为例，资源池（RESOURCE_POOL_ID）名称是 `pool_mysql001_zone3_jsu`，资源池的 ID（RESOURCE_POOL_ID）是 1001、归属于的租户 ID（TENANT_ID）是 1002、使用的资源规格 ID（UNIT_CONFIG_ID）是 1003，资源池的 Unit 个数（UNIT_COUNT）是 1，使用的 Zone 列表（ZONE_LIST）是 zone3。
 
 ```shell
 obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
@@ -84,7 +84,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 通过如下语句，在多个视图中查找租户资源配置信息。
 
-以查询结果中 mysql001 租户为例，`pool:conf` 列可以看到该租户的三个资源池名称和所用的资源规格名称，`unit_info` 列可以看到资源池的 unit 个数为 1 和相应的 CPU 配置为 1.5C、内存配置都是 6G。
+以查询结果中 mysql001 租户为例，`pool:conf` 列可以看到该租户的三个资源池名称和所用的资源规格名称，`unit_info` 列可以看到资源池的 Unit 个数为 1 和相应的 CPU 配置为 1.5C、内存配置都是 6G。
 
 ```shell
 obclient [oceanbase]> SELECT c.TENANT_ID, e.TENANT_NAME, concat(c.NAME, ': ', d.NAME) `pool:conf`,concat(c.UNIT_COUNT, ' unit: ', d.min_cpu, 'C/', ROUND(d.MEMORY_SIZE/1024/1024/1024,0), "G") unit_info
@@ -134,11 +134,11 @@ obclient [oceanbase]> SELECT a.TENANT_NAME,a.TENANT_ID,b.SVR_IP FROM DBA_OB_TENA
 15 rows in set
 ```
 
-## 查看节点的 unit 信息
+## 查看节点的 Unit 信息
 
-通过 `GV$OB_UNITS` 视图，可以查看所有节点的 unit 信息，示例如下：
+通过 `GV$OB_UNITS` 视图，可以查看所有节点的 Unit 信息，示例如下：
 
-* 以查询结果第三行为例，节点 IP（SVR_IP）是 `xx.xx.xx.218`，服务器端口号（SVR_PORT）是 2882，unit ID（UNIT_ID）是 1001，租户 ID（TENANT_ID）是 1002，对应的 zone 名称（ZONE）是 zone3，CPU 规格上限（MAX_CPU）是 1.5C，内存大小（MEMORY_SIZE）是 5G，日志盘大小（LOG_DISK_SIZE）是 16G，日志盘已使用（LOG_DISK_IN_USE）1.07G，数据盘使用（DATA_DISK_IN_USE）572M，unit 状态（STATUS）正常。
+* 以查询结果第三行为例，节点 IP（SVR_IP）是 `xx.xx.xx.218`，服务器端口号（SVR_PORT）是 2882，unit ID（UNIT_ID）是 1001，租户 ID（TENANT_ID）是 1002，对应的 Zone 名称（ZONE）是 zone3，CPU 规格上限（MAX_CPU）是 1.5C，内存大小（MEMORY_SIZE）是 5G，日志盘大小（LOG_DISK_SIZE）是 16G，日志盘已使用（LOG_DISK_IN_USE）1.07G，数据盘使用（DATA_DISK_IN_USE）572M，unit 状态（STATUS）正常。
 * 结合 SVR_IP 都为 xx.xx.xx.218 的五行一起看，表示该节点有 5 个 unit，分别属于 TENANT_ID 为 1、1001、1002、1009、1010 的租户。
 * 结合 TENANT_ID 为 1002 的三行一起看，表示该租户在三个节点各有一个 unit，UNIT_ID 是 1001、1002、1003。
 
