--- a/zh-CN/7.reference/1.oceanbase-database-concepts/3.multi-tenant-architecture/5.tenants-and-resource-management/1.tenant-resource-management.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/3.multi-tenant-architecture/5.tenants-and-resource-management/1.tenant-resource-management.md
@@ -197,11 +197,11 @@ obclient> ALTER RESOURCE POOL rp1 UNIT 'uc2';
 ```sql
 obclient> CREATE RESOURCE POOL rp1 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1', 'zone2');
 
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 3; // 调大 UNIT_NUM 
 
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 2; // 调小 UNIT_NUM 
 
-obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定资源单元调小unit num
+obclient> ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003); // 指定资源单元调小 UNIT_NUM 
 ```
 
 变更 `UNIT_NUM` 也分为两类，即调大 `UNIT_NUM` 和调小 `UNIT_NUM`。其中，`ALTER RESOURCE POOL rp1 UNIT_NUM 3;` 是调大 `UNIT_NUM`；`ALTER RESOURCE POOL rp1 UNIT_NUM 2;` 和 `ALTER RESOURCE POOL rp1 UNIT_NUM 1 DELETE UNIT = (1001, 1003);` 为调小 `UNIT_NUM`。
@@ -217,7 +217,7 @@ obclient> CREATE RESOURCE POOL pool2 UNIT 'uc1', UNIT_NUM 2, ZONE_LIST ('zone1',
 
 obclient> CREATE TENANT tt resource_pool_list=('pool1','pool2');
 
-obclient> ALTER RESOURCE TENANT tt UNIT_NUM = 3;//调大unit num
+obclient> ALTER RESOURCE TENANT tt UNIT_NUM = 3;//调大 UNIT_NUM
 ```
 
 ### 变更 ZONE_LIST
@@ -268,7 +268,7 @@ obclient> CREATE RESOURCE POOL pool3 UNIT='uc0', UNIT_NUM=1, ZONE_LIST=('z3');
 obclient> ALTER RESOURCE POOL MERGE ('pool1','pool2','pool3') INTO ('pool0');
 ```
 
-  <main id="notice" type='explain'>
+<main id="notice" type='explain'>
     <h4>说明</h4>
     <p>合并资源池时，不会影响资源池被租户使用，仅在 Root Service 的管理层看来是多个资源池合并为一个资源池，方便统一维护。</p>
-  </main>
+</main>
