--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/2.check-cluster-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/2.check-cluster-parameters.md
@@ -60,7 +60,7 @@ PARAM_OPTS:
 | memstore_limit_percentage        | 租户使用 memstore 的内存占其总可用内存的百分比。取值范围 \[1, 99\]。                                                                     | 50         |
 | freeze_trigger_percentage        | 触发全局冻结的租户使用内存阈值。取值范围 \[1, 99\]。                                                                                  | 50         |
 | system_memory                    | 用于设置系统预留给租户 ID 为 `500` 的租户的内存容量。取值范围 \[0 MB, +∞)。                                                                                      | 50 GB      |
-| resource_hard_limit              | 用于分配 unit 。在分配 CPU 和内存等资源时，资源总量是实际数量乘以该百分比的值。最终 Server 资源占比不能超过 resource-hard-limit。取值范围 \[1, 10000\]。           | 100        |
+| resource_hard_limit              | 用于分配 Unit 。在分配 CPU 和内存等资源时，资源总量是实际数量乘以该百分比的值。最终 Server 资源占比不能超过 resource-hard-limit。取值范围 \[1, 10000\]。           | 100        |
 | syslog_level                     | 系统日志级别。取值 (DEBUG、 TRACE、INFO、WARN、USER-ERR、ERROR)。                                                               | INFO\|info |
 | data_disk_usage_limit_percentage | 数据文件最大可以写入的百分比，超过这个阈值后，禁止数据迁入。取值范围 \[50, 100\]。                                                                  | 95         |
 | enable_perf_event                | 是否开启性能事件的信息收集功能，取值 True 或 False。                                                                                 | True       |
