--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/5.memory-problem-diagnosis.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/5.memory-problem-diagnosis.md
@@ -137,6 +137,6 @@ obclient> select *from GV$OB_MEMORY where mod_name = 'glibc_malloc' and hold > 0
 +-----------+----------------+----------+--------+--------------+----------+----------+--------+--------------+------+-----------+-----------+-------+-------------+------------+
 | tenant_id | svr_ip         | svr_port | ctx_id | label        | ctx_name | mod_type | mod_id | mod_name     | zone | hold      | used      | count | alloc_count | free_count |
 +-----------+----------------+----------+--------+--------------+----------+----------+--------+--------------+------+-----------+-----------+-------+-------------+------------+
-|       500 | 100.81.113.215 |    46824 |     26 | glibc_malloc | GLIBC    | user     |      0 | glibc_malloc | z1   | 249800208 | 219156754 | 41247 |           0 |          0 |
+|       500 | xx.xx.xx.xx    |    46824 |     26 | glibc_malloc | GLIBC    | user     |      0 | glibc_malloc | z1   | 249800208 | 219156754 | 41247 |           0 |          0 |
 +-----------+----------------+----------+--------+--------------+----------+----------+--------+--------------+------+-----------+-----------+-------+-------------+------------+
 ```
