--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.modify-cluster-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.modify-cluster-parameters.md
@@ -50,7 +50,7 @@ obclient> ALTER SYSTEM SET mysql_port=8888;
 
 obclient> ALTER SYSTEM SET mysql_port=8888 ZONE='z1';
 
-obclient> ALTER SYSTEM SET mysql_port=8888 SERVER='192.168.100.1:2882';
+obclient> ALTER SYSTEM SET mysql_port=8888 SERVER='xx.xx.xx.xx:2882';
 ```
 
 OceanBase 数据库中各集群参数的详细说明信息请参见 [系统配置项](../../../../5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md) 章节。
