--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-parameters/3.modify-tenant-parameters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.manage-tenant-parameters/3.modify-tenant-parameters.md
@@ -54,7 +54,7 @@ ALTER SYSTEM [SET] parameter_name = expression [SCOPE = {MEMORY | SPFILE | BOTH}
   
   obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20;
   
-  obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 SERVER='192.168.100.1:2882';
+  obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 SERVER='xx.xx.xx.xx:2882';
   
   obclient> ALTER SYSTEM SET log_disk_utilization_threshold = 20 ZONE='z1';
   ```
