--- a/zh-CN/8.FAQ/6.cluster-management.md
+++ b/zh-CN/8.FAQ/6.cluster-management.md
@@ -160,7 +160,7 @@ Clog reconfirm 卡住的主要原因和关键日志信息有
 | 主要原因 | 原因解释 | 关键日志及诊断方法 |
 | --- | --- | --- |
 | Clog 回放卡住 | reconfirm 过程中需要将滑动窗口左侧已经确认的日志全部提交回放，一旦回放由于各种异常（内存分配失败、回放出错）卡住的话，滑动窗口就会发生积压，积压的日志数量达到阈值(目前是 2万)后，滑动窗口就满了，无法接收新的日志，reconfirm 也就无法正常执行下去。 | 如果滑动窗口中有已确认的日志需要提交回放，则可以看到 observer.log CLOG 模块报 [ERROR] 级别错误码 -4023，日志的关键字是：<br>`there are confirmed logs in sw, try again(partition_key={tid:1106108697592670, partition_id:0, part_cnt:1}, ret=-4023, new_start_id=371801833, start_id=371802703)`<br>回放卡主的原因可能很多，诸如 alloc memory failed 这样的内存分配错误、replay error 这种回放错误。需要进一步通过 observer.log 进行排查 `grep ERROR observer.log | grep STORAGE | grep 'alloc memory'` 、 `grep ERROR observer.log | grep STORAGE | grep replay` |
-| Clog 满盘 | Clog reconfirm 过程中需要写 prepare、start_working  等日志，且需要达成多数派确认，如果 Server 的 Clog 盘满了导致无法写这些日志，且余下的正常 Server 不够多数派，那么 reconfirm 也会失败。 | 如果 Clog 发生满盘，observer.log 里 CLOG 模块报 [ERROR] 级别错误码 -4264， 日志的关键字是：<br>`log outof disk space(partition_key={tid:1102810162709414, partition_id:46, part_cnt:0}, server=“11.138.244.78:29432”, ret=-4264, free_quota=-3381817344)` |
+| Clog 满盘 | Clog reconfirm 过程中需要写 prepare、start_working  等日志，且需要达成多数派确认，如果 Server 的 Clog 盘满了导致无法写这些日志，且余下的正常 Server 不够多数派，那么 reconfirm 也会失败。 | 如果 Clog 发生满盘，observer.log 里 CLOG 模块报 [ERROR] 级别错误码 -4264， 日志的关键字是：<br>`log outof disk space(partition_key={tid:1102810162709414, partition_id:46, part_cnt:0}, server=“xx.xx.xx.xx:29432”, ret=-4264, free_quota=-3381817344)` |
 | Clog 同步网络不通 | Clog reconfirm 过程中候选 Leader 需要与各个 Follower 在多个阶段进行通信，因此如果网络出现问题，导致无法收发包或收发包延迟太大也可能导致 reconfirm 失败。 | 网络不通会导致 reconfirm 多个阶段均会失败，比如发送完 PREPARE 日志后一直收不到 Follower 的回复，会导致本机一直打印如下关键字的日志直至超时失败：<br>`max_log_ack_list not majority`<br>后续的写 start_working 日志也可能由于网络异常而导致无法收到多数派 ack，进而超时失败。<br>很多原因可能导致网络不通，排查步骤：<br><ol><li>执行 ping，如果能通说明网络正常；</li><li>执行 sudo iptables -L , 看是否有网络隔离；</li><li>查看对端租户队列日志，看是否队列满了，无法处理请求。</li></ol> |
 | 500 租户请求队列堆积 | 如果 500 请求队列发生堆积，无法处理新的 RPC 请求，reconfirm 相关的消息处理也会停滞 Leader 端日志显示，Follower 一直没有回复任何请求。这个时候需要进一步分析队列堆积情况和队列堆积原因。 | 查看队列堆积情况：搜索 Leader/Follower 的 observer.log，关键字是 `dump tenant info(tenant={id:500,` , 通过搜索关键字，可以看到 500 租户的队列情况，其中 `req_queue` 字段后跟的内容就是队列情况。<br>通常在看出 500 租户队列请求队列堆积的情况下还需要一进步分析队列堆积的原因，这时候可以用 obstack 来打印当前的 OBServer 节点堆栈信息，并将信息一并发给 OceanBase 数据库技术支持进行问题诊断。 |
 | 工作线程不足 | - | 看是否存在如下 easy 包处理超时的日志：<br>`[20XX-XX-XX 11:12:12.103] easy_request.c:420(tid:7fe2cdc9f700)[57136] rpc time, packet_id :2425446521, pcode :4096, client_start_time :1517541127590356, start_send_diff :8, send_connect_diff: 0, connect_write_diff: 5, request_fly_ts: 188, arrival_push_diff: 2, wait_queue_diff: 4508603, pop_process_start_diff :2, process_handler_diff: 4184, process_end_response_diff: 1, response_fly_ts: 447, read_end_diff: 1, client_end_time :1517541132103797, dst: 10.101.X.X:XXXXX`<br>可以看到 `wait_queue_diff` 达到了几秒级别，说明工作线程处理比较慢，检查 `cpu_quota` （`cpu_quota_concurrency`、`workers_per_cpu_quota`、`system_cpu_quota`）相关配置项是否配置过小。 |
